# parabox

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
crates/parabox/: Cargo.toml
crates/parabox-format/: Cargo.toml
crates/parabox-format/examples/: format_blocks.rs  terminal_game.rs
crates/parabox-format/src/: formatter.rs  lib.rs  matrix.rs
crates/parabox-macros/: Cargo.toml
crates/parabox-macros/src/: lib.rs
crates/parabox-parser/: Cargo.toml
crates/parabox-parser/src/: command.rs  error.rs  executor.rs  kind.rs  lexer.rs  lib.rs  meta.rs  parser.rs  source.rs
crates/parabox-tests/: Cargo.toml
crates/parabox-tests/src/: lib.rs  logger.rs  tests.rs
crates/parabox-tests/worlds/cycle/: test_cycle_enter.pbs  test_cycle_exit.pbs  test_cycle_trigger.pbs
crates/parabox-tests/worlds/eat/: test_eat_double.pbs  test_eat_single.pbs
crates/parabox-tests/worlds/enter/: test_enter_alias_blocked.pbs  test_enter_alias_box.pbs  test_enter_alias_container.pbs  test_enter_double.pbs  test_enter_single.pbs
crates/parabox-tests/worlds/epsilon/: test_epsilon_double.pbs  test_epsilon_mixed.pbs  test_epsilon_single.pbs
crates/parabox-tests/worlds/exit/: test_exit_double.pbs  test_exit_single.pbs
crates/parabox-tests/worlds/infinity/: test_infinity_double.pbs  test_infinity_mixed.pbs  test_infinity_single.pbs
crates/parabox-tests/worlds/push/: test_push_double.pbs  test_push_double_into_wall.pbs  test_push_single.pbs  test_push_single_into_wall.pbs
crates/parabox-tests/worlds/solve/: test_solve_no_epsilon.pbs  test_solve_no_infinity.pbs  test_solve_orphan.pbs
crates/parabox-tests/worlds/transfer/: test_transfer.pbs  test_transfer_infinity.pbs
crates/parabox-tests/worlds/void/: test_void_eat.pbs  test_void_enter.pbs  test_void_exit.pbs  test_void_push.pbs
crates/parabox/src/: lib.rs
crates/parabox/src/block/: info.rs  mod.rs  proto.rs  state.rs  types.rs
crates/parabox/src/world/: mod.rs  query.rs  world.rs
crates/parabox/src/world/algorithm/: algorithm.rs  cycle.rs  mod.rs  movement.rs  rational.rs
