[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Philip Fan <topfyf@qq.com>"]
repository = "https://github.com/parabox-rs/parabox"

[workspace.dependencies]
parabox = { path = "crates/parabox" }
parabox-parser = { path = "crates/parabox-parser" }
parabox-macros = { path = "crates/parabox-macros" }
slotmap = "1.0.7"
unscanny = "0.1.0"
ecow = "0.2.3"
tracing = { version = "0.1.41", features = ["release_max_level_info"] }
tracing-subscriber = "0.3.19"
