[package]
name = "parabox-format"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["parabox", "format"]
categories = ["games", "value-formatting"]
description = "The terminal formatter for the Parabox game."

[dependencies]
parabox = { workspace = true }
anstyle = { workspace = true }
slotmap = { workspace = true }

[dev-dependencies]
parabox-parser = { workspace = true }
