[package]
name = "parabox-parser"
version = "0.1.0"
edition.workspace = true
readme.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["parabox", "parser"]
categories = ["games", "parser-implementations"]
description = "The parser and the executor for the Parabox language."

[dependencies]
parabox = { workspace = true }
parabox-macros = { workspace = true }
unscanny = { workspace = true }
ecow = { workspace = true }
tracing = { workspace = true }
